redroom/stark-tower/nextcloud-friday/templates/nextcloud-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: nextcloud-friday
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud-friday
    app.kubernetes.io/component: app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 4G
    nginx.ingress.kubernetes.io/server-snippet: |-
      # server_tokens off;
      # proxy_hide_header X-Powered-By;
      # rewrite ^/.well-known/webfinger /index.php/.well-known/webfinger last;
      # rewrite ^/.well-known/nodeinfo /index.php/.well-known/nodeinfo last;
      # rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
      # rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json;
      #       location = /.well-known/carddav {
      #         return 301 $scheme://$host/remote.php/dav;
      #       }
      #       location = /.well-known/caldav {
      #         return 301 $scheme://$host/remote.php/dav;
      #       }
      #       client_max_body_size 10G;
      #       client_body_buffer_size 400M;
      # location = /robots.txt {
      #   allow all;
      #   log_not_found off;
      #   access_log off;
      # }
      # location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
      #   deny all;
      # }
      # location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
      #   deny all;
      # }
spec:
  ingressClassName: tailscale
  rules:
    - host: friday
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nextcloud-friday
                port:
                  number: 8080
  tls:
    - hosts:
      - friday
